# haskell-examples

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md.save0  associated-type-synonym.hs  haskell-examples.cabal
2020-11-23-rae-linear-money/: Linear3.hs
2022-02-22-type-families/: associated-type-synonym.hs
2022-03-02-sized-vector/: cabal.project.freeze  hie.yaml  vector-with-typed-length.hs  x20220302-sized-vector.cabal
2022-03-09-hlist/: heterogeneous-collection-gadts.hs
2022-05-25-inclusion-polymorphism/: AnyNum.cpp  Directed.hs  FreeNum.hs  inclusion-polymorphism.lhs
2022-05-28-ghc2021-and-typeable/: ghc2021-and-typeable.hs
2022-05-30-more-linear-types/: linear-types.cpp
2022-06-07-cata/: Cata.hs
2022-06-29-extending-constraints/: Concepts.hs  System.hs  extending-constraints.hs  no-extending-constraints.hs
2022-08-14-mptc-flip/: MPTCFlip.hs
2022-10-15-agda-min/: agda-min.agda
2023-02-08-mini-othello/: mini-othello.hs
2023-02-24-wasm-comm/: Makefile  README.md  Store.hs  WasmComm.hs  client.js  index.html  package-lock.json  package.json
2023-03-01-dinstinct-instances/: distinct-instances.hs
2023-06-02-type-level-hlist/: CSVDecoderAPI.hs  Main.hs  TSVDecoder.hs  TSVDecoderAPI.hs  TSVDecoderTypes.hs  type-level-hlist.hs
2023-06-02-type-list-example-csv-decoder/: CSVDecoderCore.hs  CSVDecoderTypes.hs  Main.hs  README.org
2023-07-16-genvectn/: genvectn.hs
2023-07-25-overloaded-record-dot/: Overloaded.hs  Records.hs
2023-08-29-strong-duck-typing/: strong-duck.hs
2023-09-20-rebindable-ite/: ite.hs
2024-09-27-simple-cat/: cat.hs
(+27 files in other folders)
