cabal-version:      3.4
name:               x20220302-sized-vector
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Miao Zhicheng
maintainer:         miao@decentral.ee

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable x20220302-sized-vector
    main-is:          vector-with-typed-length.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
              base >=4.14.0.0,
              sized
    hs-source-dirs:   examples
    default-language: GHC2021
